src/scrcpy_ffi.h

// ---------------------------------------------------------------------------
// Connection States (state_code in on_connection_state_cb)
// ---------------------------------------------------------------------------
#define SCRCPY_STATE_DISCONNECTED   0  // Device disconnected normally or not yet connected
#define SCRCPY_STATE_CONNECTING     1  // Initializing and connecting
#define SCRCPY_STATE_CONNECTED      2  // Connected successfully, video stream started
#define SCRCPY_STATE_ERROR          3  // Unrecoverable error occurred
// ---------------------------------------------------------------------------
// Callback types — Dart side registers using NativeCallable.listener
// ---------------------------------------------------------------------------

/**
 * Triggered when a new video frame is decoded and the buffer is updated.
 * Dart side receives this and calls markTextureFrameAvailable() to redraw.
 * @param width  frame width in pixels
 * @param height frame height in pixels
 */
typedef void (*on_video_frame_ready_cb)(void* handle, int32_t width, int32_t height);
/**
 * Triggered when raw PCM audio samples (16-bit signed, interleaved stereo) are ready.
 * @param handle      session instance handle pointer
 * @param samples     pointer to the PCM sample array (valid until callback returns)
 * @param sample_count total sample count (not per-channel)
 * @param sample_rate  audio sample rate (typically 48000 Hz)
 * @param channels     channel count (typically 2)
 */
typedef void (*on_audio_pcm_ready_cb)(void* handle,
                                      const int16_t* samples,
                                      int32_t sample_count,
                                      int32_t sample_rate,
                                      int32_t channels);
/**
 * Triggered when the connection state changes.
 * @param handle      session instance handle pointer
 * @param state_code  one of the SCRCPY_STATE_* constants
 * @param device_name Android device model name (UTF-8, NULL if not available)
 */
typedef void (*on_connection_state_cb)(void* handle,
                                       int32_t state_code,
                                       const char* device_name);
/**
 * Triggered when the Android device's clipboard changes.
 * @param handle      session instance handle pointer
 * @param text new clipboard text content (UTF-8 string, NULL-terminated)
 */
typedef void (*on_clipboard_changed_cb)(void* handle, const char* text);
// ---------------------------------------------------------------------------
// Control API — sends events from PC down to Android device
// ---------------------------------------------------------------------------

#define SCRCPY_TOUCH_ACTION_DOWN   0
#define SCRCPY_TOUCH_ACTION_UP     1
#define SCRCPY_TOUCH_ACTION_MOVE   2
#define SCRCPY_KEY_ACTION_DOWN  0
#define SCRCPY_KEY_ACTION_UP    1
/**
 * Sends a scroll event to the Android device.
 * @param handle     session instance handle pointer
 * @param x, y       normalized pointer coordinates
 * @param h_scroll   horizontal scroll steps (negative = left, positive = right)
 * @param v_scroll   vertical scroll steps (negative = up, positive = down)
 */
FFI_EXPORT void ffi_scrcpy_send_scroll(void* handle, float x, float y,
                                       float h_scroll, float v_scroll);
/** Sends the Back button press or wakes the screen if it is turned off. */
FFI_EXPORT void ffi_scrcpy_send_back_or_screen_on(void* handle);
/**
 * Sets the clipboard content on the Android device.
 * @param handle session instance handle pointer
 * @param text  UTF-8 string content (NULL-terminated)
 * @param paste if true, Android automatically pastes into the focused field
 */
FFI_EXPORT void ffi_scrcpy_set_clipboard(void* handle, const char* text, bool paste);
/**
 * Injects text directly into the focused field on the Android device.
 * @param handle session instance handle pointer
 * @param text UTF-8 text string to inject
 */
FFI_EXPORT void ffi_scrcpy_inject_text(void* handle, const char* text);
/**
 * Frees a string allocated by the native FFI layer.
 * Used to release strings returned via callbacks (e.g., clipboard text).
 * @param str pointer to the string to free (can be NULL)
 */
FFI_EXPORT void ffi_scrcpy_free_string(char* str);
/**
 * Copies a software-decoded current frame's Y plane and interleaves U/V planes
 * into a destination NV12 buffer. This API deliberately rejects hardware
 * frames; GPU presentation must use ffi_scrcpy_acquire_gpu_frame().
 * If dst_y or dst_uv is NULL, only width and height are returned (useful for buffer allocation).
 */
FFI_EXPORT bool ffi_scrcpy_copy_to_nv12(
    void* handle,
    int32_t* out_width,
    int32_t* out_height,
    uint8_t* dst_y,
    int32_t dst_y_stride,
    uint8_t* dst_uv,
    int32_t dst_uv_stride
);