lib/src/bindings/scrcpy_bindings.dart


  /// Sends a scroll event to the Android device.
  ///
  /// [handle] is the session instance handle.
  /// [x] and [y] are the normalized pointer coordinates.
  /// [h_scroll] is the horizontal scroll amount (negative = left, positive = right).
  /// [v_scroll] is the vertical scroll amount (negative = up, positive = down).
  void ffi_scrcpy_send_scroll(
    ffi.Pointer<ffi.Void> handle,
    double x,
    double y,
    double h_scroll,
    double v_scroll,
  ) {
    return _ffi_scrcpy_send_scroll(handle, x, y, h_scroll, v_scroll);
  }

  late final _ffi_scrcpy_send_scrollPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
          )
        >
      >('ffi_scrcpy_send_scroll');
  late final _ffi_scrcpy_send_scroll = _ffi_scrcpy_send_scrollPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, double, double, double, double)
      >();

  /// Sends a back button press or wakes the screen if it is turned off.
  void ffi_scrcpy_send_back_or_screen_on(ffi.Pointer<ffi.Void> handle) {
    return _ffi_scrcpy_send_back_or_screen_on(handle);
  }

  late final _ffi_scrcpy_send_back_or_screen_onPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'ffi_scrcpy_send_back_or_screen_on',
      );
  late final _ffi_scrcpy_send_back_or_screen_on =
      _ffi_scrcpy_send_back_or_screen_onPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Sets the clipboard content on the Android device.
  ///
  /// [handle] is the session instance handle.
  /// [text] is the UTF-8 text string (NULL-terminated).
  /// [paste] if true, automatically pastes into the currently focused field.
  void ffi_scrcpy_set_clipboard(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> text,
    bool paste,
  ) {
    return _ffi_scrcpy_set_clipboard(handle, text, paste);
  }

  late final _ffi_scrcpy_set_clipboardPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Bool,
          )
        >
      >('ffi_scrcpy_set_clipboard');
  late final _ffi_scrcpy_set_clipboard = _ffi_scrcpy_set_clipboardPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, bool)
      >();

  /// Injects raw text directly into the focused input field on the Android device.
  ///
  /// [handle] is the session instance handle.
  /// [text] is the UTF-8 text string to inject.
  void ffi_scrcpy_inject_text(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> text,
  ) {
    return _ffi_scrcpy_inject_text(handle, text);
  }

  late final _ffi_scrcpy_inject_textPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('ffi_scrcpy_inject_text');
  late final _ffi_scrcpy_inject_text = _ffi_scrcpy_inject_textPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  /// Frees a string allocated by the native FFI layer.
  ///
  /// Used to release strings returned via callbacks (e.g., clipboard text).
  /// [str] is the pointer to the string to free.
  void ffi_scrcpy_free_string(ffi.Pointer<ffi.Char> str) {
    return _ffi_scrcpy_free_string(str);
  }

  late final _ffi_scrcpy_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'ffi_scrcpy_free_string',
      );
  late final _ffi_scrcpy_free_string = _ffi_scrcpy_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Copies the current frame's Y plane and interleaves U/V planes into a destination NV12 buffer.
  /// If dst_y or dst_uv is NULL, only width and height are returned (useful for buffer allocation).
  bool ffi_scrcpy_copy_to_nv12(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Int32> out_width,
    ffi.Pointer<ffi.Int32> out_height,
    ffi.Pointer<ffi.Uint8> dst_y,
    int dst_y_stride,
    ffi.Pointer<ffi.Uint8> dst_uv,
    int dst_uv_stride,
  ) {
    return _ffi_scrcpy_copy_to_nv12(
      handle,
      out_width,
      out_height,
      dst_y,
      dst_y_stride,
      dst_uv,
      dst_uv_stride,
    );
  }

  late final _ffi_scrcpy_copy_to_nv12Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
          )
        >
      >('ffi_scrcpy_copy_to_nv12');
  late final _ffi_scrcpy_copy_to_nv12 = _ffi_scrcpy_copy_to_nv12Ptr
      .asFunction<
        bool Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();
}

/// Callback triggered when a new video frame has been decoded.
///
/// [handle] is the session instance handle.
/// [width] is the frame width in pixels.
/// [height] is the frame height in pixels.
typedef on_video_frame_ready_cb =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> handle,
          ffi.Int32 width,
          ffi.Int32 height,
        )
      >
    >;

/// Callback triggered when a new raw PCM audio frame is available.
///
/// [handle] is the session instance handle.
/// [samples] is a pointer to the 16-bit signed PCM samples.
/// [sample_count] is the total number of samples.
/// [sample_rate] is the audio sample rate (typically 48000 Hz).
/// [channels] is the number of channels (typically 2).
typedef on_audio_pcm_ready_cb =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> handle,
          ffi.Pointer<ffi.Int16> samples,
          ffi.Int32 sample_count,
          ffi.Int32 sample_rate,
          ffi.Int32 channels,
        )
      >
    >;

/// Callback triggered when the connection state of the scrcpy session changes.
///
/// [handle] is the session instance handle.
/// [state_code] is the state value corresponding to [ScrcpyState].
/// [device_name] is the Android device model name (UTF-8 string).
typedef on_connection_state_cb =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> handle,
          ffi.Int32 state_code,
          ffi.Pointer<ffi.Char> device_name,
        )
      >
    >;

/// Callback triggered when the clipboard content on the Android device changes.
///
/// [handle] is the session instance handle.
/// [text] is the new UTF-8 clipboard text pointer (NULL-terminated).
typedef on_clipboard_changed_cb =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> handle,
          ffi.Pointer<ffi.Char> text,
        )
      >
    >;

const int SCRCPY_STATE_DISCONNECTED = 0;

const int SCRCPY_STATE_CONNECTING = 1;

const int SCRCPY_STATE_CONNECTED = 2;

const int SCRCPY_STATE_ERROR = 3;

const int SCRCPY_TOUCH_ACTION_DOWN = 0;

const int SCRCPY_TOUCH_ACTION_UP = 1;

const int SCRCPY_TOUCH_ACTION_MOVE = 2;

const int SCRCPY_KEY_ACTION_DOWN = 0;

const int SCRCPY_KEY_ACTION_UP = 1;
